[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation library — Box and Maze classes"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
